compiler/testData/multiplatform/incompatibleFunctions/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:1:16: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect infix fun Int.plus(s: CharSequence): Int
  actual: public final actual fun Int.plus(s: CharSequence): Int
  reason: some modifiers on 'expect' declaration are missing on the 'actual' one (infix, inline, operator)
actual fun Int.plus(s: CharSequence): Int = 0
               ^^^^
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect operator fun Double.times(x: CharArray): Unit
  actual: public final actual fun Double.times(x: CharArray): Unit
  reason: some modifiers on 'expect' declaration are missing on the 'actual' one (infix, inline, operator)
actual fun Double.times(x: CharArray) {}
                  ^^^^^
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:5:12: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect inline fun f1(): Unit
  actual: public final actual fun f1(): Unit
  reason: some modifiers on 'expect' declaration are missing on the 'actual' one (infix, inline, operator)
actual fun f1() {}
           ^^
